[package]
name = "bustle"
version = "0.4.2"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "Apache-2.0"

readme = "README.md"
description = "Benchmarking harness for concurrent key-value collections"
repository = "https://github.com/jonhoo/bustle.git"

keywords = ["concurrent","benchmark","harness"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "bustle", build = "18" }
maintenance = { status = "experimental" }

[dependencies]
rand = { version = "0.8" }
tracing = { version = "0.1", features = ["std"], default-features = false }
rand_pcg = "0.3"

[dev-dependencies]
tracing-subscriber = "0.2"
num_cpus = "1"

[[bench]]
name = "arc_mutex_std"
harness = false

[[bench]]
name = "arc_rwlock_std"
harness = false
