[package]
name = "bustle"
version = "0.5.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "Apache-2.0"

readme = "README.md"
description = "Benchmarking harness for concurrent key-value collections"
repository = "https://github.com/jonhoo/bustle.git"

keywords = ["concurrent","benchmark","harness"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
scopeguard = "1"
tracing = { version = "0.1", features = ["std"], default-features = false }

[dev-dependencies]
tracing-subscriber = "0.3.8"
num_cpus = "1"

[[bench]]
name = "arc_mutex_std"
harness = false

[[bench]]
name = "arc_rwlock_std"
harness = false
